--- a/style.css
+++ b/style.css
@@ -342,8 +342,19 @@ img.img3-style {
   margin-right: auto;
 }
 
+#swbn1, #swbn2 {
+  right: 1px !important;
+}
+
+#swbp1, #swbp1 {
+  left: 1px !important;
+}
+div#mySwiper1,
+div#mySwiper {
+  padding: 0 40px;
+}
 .swiper {
-  width: auto;
+  width: 80%;
   padding-top: 100px !important;
   padding-bottom: 100px !important;
 }
@@ -600,7 +611,7 @@ img.img3-style {
 }
 
 .marginbutton1 {
-  padding-top: 200px;
+  padding-top: 50px;
   padding-bottom: 50px;
 }
 
@@ -657,14 +668,15 @@ img.img3-style {
   bottom: 30px;
   right: 30px;
   z-index: 99;
-  font-size: 18px;
+  font-size: 15px !important;
   border: none;
   outline: none;
   background-color: #f50000;
   color: #fffefe;
   cursor: pointer;
-  padding: 15px;
-  border-radius: 100px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50px;
 }
 
 #myBtn:hover {
@@ -688,7 +700,7 @@ img.img3-style {
 }
 
 form {
-  margin-top: 50px !important;
+  margin-top: 200px !important;
 }
 
 input {
@@ -710,7 +722,6 @@ input {
   padding: 30px 50px;
   border: 1px solid gray;
   width: 100%;
-  margin-bottom: 50px;
 }
 
 .inp {
@@ -778,10 +789,11 @@ input {
 
 .margin1 {
   margin-left: 15px;
+  margin-top:18px;
 }
 
 .modify {
-  margin:15px !important;
+  margin: 15px !important;
 }
 
 .logo {
@@ -802,28 +814,63 @@ input {
 }
 
 @-webkit-keyframes fadein {
-  0% { opacity: 0; margin-left: -250px; }
-  100% { opacity: 1; margin-left: 0; }
+  0% {
+    opacity: 0;
+    margin-left: -250px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0;
+  }
 }
 
 @-moz-keyframes fadein {
-  0% { opacity: 0; margin-left: -250px; }
-  100% { opacity: 1; margin-left: 0; }
+  0% {
+    opacity: 0;
+    margin-left: -250px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0;
+  }
 }
 
 @-ms-keyframes fadein {
-  0% { opacity: 0; margin-left: -250px; }
-  100% { opacity: 1; margin-left: 0; }
+  0% {
+    opacity: 0;
+    margin-left: -250px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0;
+  }
 }
 
 @-o-keyframes fadein {
-  0% { opacity: 0; margin-left: -250px; }
-  100% { opacity: 1; margin-left: 0; }
+  0% {
+    opacity: 0;
+    margin-left: -250px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0;
+  }
 }
 
 @keyframes fadein {
-  0% { opacity: 0; margin-left: -250px; }
-  100% { opacity: 1; margin-left: 0; }
+  0% {
+    opacity: 0;
+    margin-left: -250px;
+  }
+
+  100% {
+    opacity: 1;
+    margin-left: 0;
+  }
 }
 
 @media (min-width: 768px) {
@@ -1016,10 +1063,6 @@ input {
   .fontsize {
     font-size: 25px !important;
   }
-
-  #myBtn {
-    font-size: 25px !important;
-  }
 }
 
 @media (min-width: 2000px) {
@@ -1150,6 +1193,10 @@ input {
 
   .struct3 .col-md-11 {
     max-width: 100% !important;
+  }
+
+  form {
+    margin-top: 50px !important;
   }
 }
 
