--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ body {
   color: white;
   text-align: center;
   padding-top: 100px;
-  font-size: 20px;
+  font-size: 25px;
 }
 
 .line-space {
@@ -806,6 +806,10 @@ input {
   text-shadow: 5px 2px #222324, 2px 4px #222324, 3px 5px #222324;
 }
 
+.btn-block {
+  width: auto !important;
+}
+
 @-webkit-keyframes fadein {
   0% {
     opacity: 0;
@@ -936,11 +940,19 @@ input {
   .struct2 .subtit {
     text-align: left;
   }
+
+  .custom-select {
+    margin-left: 50px !important;
+  }
 }
 
 @media (min-width: 1750px) {
   .container {
     max-width: 1500px !important;
+  }
+
+  .custom-select {
+    margin-left: 100px !important;
   }
 
   .padlogo3 {
@@ -1352,7 +1364,7 @@ input {
     text-align: center;
     max-width: 100%;
     margin-bottom: 10px;
-    font-size: 30px;
+    font-size: 40px !important;
   }
 
   .title {
@@ -1442,6 +1454,10 @@ input {
   .fontsize {
     font-size: 16px !important;
   }
+
+  .dropdown-item {
+    text-align: center !important;
+  }
 }
 
 @media (max-width: 900px) {
@@ -1483,18 +1499,22 @@ input {
   .struct9 .col-md-6 {
     text-align: center;
   }
-}
 
-@media (max-width: 576px) {
+  .struct1 .col-md {
+    width: 85% !important;
+  }
+
   .marginbutton {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 50px !important;
   }
 
   .marginbutton1 {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 50px !important;
+    padding-right: 50px !important;
   }
+}
+
+@media (max-width: 576px) {
 
   .navimg {
     width: 200px !important;
